--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,9 +17,11 @@ body{
 }
 h1{
   font-size:3em;
+  font-family: 'Dosis-SemiBold';
 }
 h2{
   font-size: 2em;
+
 }
 h3{
   font-size: 1.666em;
@@ -130,7 +132,7 @@ a{
 .panel{
   margin:1em;
   padding:12px;
-
+  font-size: 18px;
 }
 .thumbnail {
   max-width: 320px;
@@ -170,7 +172,7 @@ a{
 }
 
 .block{
-  z-index: 50;
+  z-index: 1;
   padding: 0.25em;
   font-size: 1em;
   min-height: 333px;
@@ -186,7 +188,7 @@ a{
   }
 }
 .block-two{
-  color: $darkGrau;
+  color: $wit;
   background: $grayblau;
 }
 .block-three{
@@ -232,14 +234,23 @@ a{
   li:hover .portfolio-content{
     background-color:rgba(10,10,10,0.767);
   }
-  .archilocator:hover .portfolio-content:after{
-    content:"ArchiLocator";
+  .portfolio-content{
+    display: none;
+
+  }
+  .portfolio-item:hover .portfolio-content{
+    display: inline-block;
     line-height: 1.4;
-    font-size: 1.225em;
-    top: 50%;
-    left:33%;
+    letter-spacing: 1px;
+    font-size: 1.7em;
     text-align: center;
-    position: relative;
+    a{
+      font-weight: bold;
+      color:$sBlau;
+      position: relative;
+      top:120px;
+      text-shadow: 2px 2px $deepPurp;
+    }
   }
   .portfolio-item{
     overflow: auto;
@@ -253,6 +264,67 @@ a{
   }
 
 }
+.modalDialog{
+  color:$deepPurp;
+  position: fixed;
+  top:0;
+  right:0;
+  bottom:0;
+  left:0;
+  background:rgba(0,0,0,0.8);
+  z-index: 99999;
+  opacity: 0;
+  transition: all 400ms ease-in-out;
+  pointer-events: none;
+
+  div{
+    width:640px;
+    position:relative;
+    margin:10% auto;
+    padding:5px 20px 13px 20px;
+    border-radius:10px;
+    background:#fff;
+    background: -moz-linear-gradient(#fff, $deepPurp);
+	  background: -webkit-linear-gradient(#fff, $deepPurp);
+	  background: -o-linear-gradient(#fff, $deepPurp);
+  }
+  h3{
+    font-style:italic;
+    padding:9px;
+    font-family: 'Dosis-SemiBold';
+  }
+  p{
+    padding:9px;
+    color:$wit;
+  }
+
+}
+.modalDialog:target{
+
+  opacity: 1;
+  pointer-events: auto;
+
+}
+.close {
+	background: #606061;
+	color: #FFFFFF;
+	line-height: 25px;
+	position: absolute;
+	right: -12px;
+	text-align: center;
+	top: -10px;
+	width: 24px;
+	text-decoration: none;
+	font-weight: bold;
+	-webkit-border-radius: 12px;
+	-moz-border-radius: 12px;
+	border-radius: 12px;
+	-moz-box-shadow: 1px 1px 3px #000;
+	-webkit-box-shadow: 1px 1px 3px #000;
+	box-shadow: 1px 1px 3px #000;
+}
+
+.close:hover { background: #00d9ff; }
 
 .hidden-section{
   opacity: 0;
@@ -311,15 +383,17 @@ a{
 footer{
   color:$grau;
 }
-.group{
-  @include group-clearfix;
-}
 .contact{
   font-size: 1.125em;
 }
+.group{
+  @include group-clearfix;
+}
 //put group on parent of floated elements for clearfix/collapse prevent
-#quincy{
+#openModal{
 
+}
+#quincy{
 
 }
 
