--- a/css/main.css
+++ b/css/main.css
@@ -667,23 +667,36 @@ a {
 
 #extended-content + .container {
   background-color: #a0332f;
-  z-index: -1;
+  z-index: 1;
   padding-top: 22px; }
 
 .well {
+  pointer-events: all;
+  z-index: 1;
   overflow: auto;
   color: #e3e3e3;
   padding: 3px; }
   .well a {
     display: inline-block; }
   .well i:hover {
-    background-color: #70c1b3; }
+    background-color: #70c1b3;
+    box-shadow: 3px 3px 3px #333; }
+  .well .contact {
+    display: inline-block;
+    font-size: 1.667em;
+    position: relative;
+    bottom: 25px;
+    padding: 2px;
+    overflow: auto;
+    min-height: 33px; }
+    .well .contact a:hover {
+      color: #4e9ad5;
+      text-shadow: 1px 1px 1px #e3e3e3;
+      font-weight: 800;
+      border-bottom: 3px solid #fbfffa; }
 
 footer {
   color: #e3e3e3; }
-
-.contact {
-  font-size: 1.125em; }
 
 .group :after {
   content: "";
