--- a/scss/style.scss
+++ b/scss/style.scss
@@ -300,6 +300,8 @@ a{
   div{
     width:640px;
     position:relative;
+    top: 25%;
+    transform: translateY(-50%);
     margin:10% auto;
     padding:5px 20px 13px 20px;
     border-radius:10px;
@@ -466,9 +468,28 @@ footer{
 
 @media screen and(max-width: 960px) {
   .container {
-    max-width:1380px;
+    max-width:960px;
   }
   .page-container{
-    max-width:1440px;
+    max-width:960px;
+  }
+
+}
+@media screen and(max-height: 960px){
+  .modalDialog{
+    div{
+      max-height: 300px;
+      top:10%;
+
+    }
+  }
+}
+
+@media screen and(max-height: 640px){
+  .modalDialog{
+    div{
+      max-height: 240px;
+      top:0%;
+    }
   }
 }
