--- a/scss/style.scss
+++ b/scss/style.scss
@@ -51,7 +51,7 @@ a{
   width:100%;
   max-width: 2356px;
   margin:0 auto;
-  @include border-box;
+
 }
 .blueprint-grid{
   background-color: $bluprint;
@@ -74,7 +74,6 @@ a{
   height:60vw;
   border-bottom: 3px solid $sBlau;
 
-  @include border-box;
   h1{
     font-size: 5em;
     font-weight: 700;
@@ -230,8 +229,8 @@ a{
   }
   .archilocator:target{
     display: block;
-    width: 960px;
-    height: 720px;
+    max-width: 960px;
+    max-height:640px;
     background:url(../img/al-screencap-1.jpg) center no-repeat;
   }
   .good-taste{
@@ -240,8 +239,8 @@ a{
   }
   .good-taste:target{
     display: block;
-    width: 960px;
-    height: 720px;
+    max-width: 960px;
+    max-height: 640px;
     background:url(../img/blu-boomerang-1.png) center no-repeat;
   }
   .wages-of-space{
@@ -250,9 +249,20 @@ a{
   }
   .wages-of-space:target{
     display: block;
-    width: 960px;
-    height: 720px;
+    max-width: 960px;
+    max-height: 640px;
     background:url(../img/wages-of-space-1.png) center no-repeat;
+  }
+  .craig-schumacher{
+    background:url(../img/craig-site-2.png) center no-repeat $grau;
+    background-size:cover;
+  }
+  .craig-schumacher:target{
+    display: block;
+    max-width: 960px;
+    max-height: 640px;
+    background:url(../img/craig-site-2.png) center no-repeat;
+    background-size:66% 66%;
   }
   li{
     float:left;
@@ -299,10 +309,10 @@ a{
 .modalDialog{
   color:$deepPurp;
   position: fixed;
-  top:0;
-  right:0;
-  bottom:0;
-  left:0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background:rgba(0,0,0,0.8);
   z-index: 99999;
   opacity: 0;
@@ -310,10 +320,12 @@ a{
   pointer-events: none;
 
   div{
-    width:640px;
-    position:relative;
-    top: 25%;
-    transform: translateY(-50%);
+    max-height: 700px;
+    max-width:640px;
+    position: fixed;
+    top: 33%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     margin:10% auto;
     padding:5px 20px 13px 20px;
     border-radius:10px;
