--- a/scss/style.scss
+++ b/scss/style.scss
@@ -205,6 +205,7 @@ a{
 
 .panel-heading > h2{
   margin-bottom: 6px;
+  padding-bottom:7px;
   border-bottom: 2px solid $grau;
 }
 .row{
@@ -230,7 +231,7 @@ a{
   .archilocator:target{
     display: block;
     max-width: 960px;
-    max-height:640px;
+    max-height:600px;
     background:url(../img/al-screencap-1.jpg) center no-repeat;
   }
   .good-taste{
@@ -240,7 +241,7 @@ a{
   .good-taste:target{
     display: block;
     max-width: 960px;
-    max-height: 640px;
+    max-height: 600px;
     background:url(../img/blu-boomerang-1.png) center no-repeat;
   }
   .wages-of-space{
@@ -250,7 +251,8 @@ a{
   .wages-of-space:target{
     display: block;
     max-width: 960px;
-    max-height: 640px;
+    max-height: 600px;
+    background-size:66% 66%;
     background:url(../img/wages-of-space-1.png) center no-repeat;
   }
   .craig-schumacher{
@@ -260,7 +262,7 @@ a{
   .craig-schumacher:target{
     display: block;
     max-width: 960px;
-    max-height: 640px;
+    max-height: 600px;
     background:url(../img/craig-site-2.png) center no-repeat;
     background-size:66% 66%;
   }
@@ -321,26 +323,31 @@ a{
 
   .modal-content{
     font-size: 18px;
-    max-height: 700px;
-    max-width:720px;
+    max-height: 720px;
+    max-width:640px;
     position: fixed;
     top: 33%;
     left: 50%;
     transform: translate(-50%, -50%);
     margin:10% auto;
-    padding:5px 20px 13px 20px;
+    padding:5px 20px 5px 20px;
     border-radius:10px;
     background:#fff;
     background: -moz-linear-gradient(#fff, $deepPurp);
 	  background: -webkit-linear-gradient(#fff, $deepPurp);
 	  background: -o-linear-gradient(#fff, $deepPurp);
+
     img{
       max-width: 100%;
+
     }
     .button{
       display: inline-block;
       text-shadow: none;
       float:right;
+    }
+    .button:hover{
+      background-color: $teel;
     }
   }
 
