--- a/scss/style.scss
+++ b/scss/style.scss
@@ -60,7 +60,7 @@ a{
 }
 .vaporwave-road{
   background-color: $deepPurp;
-  background:url(../img/header_bg.png) center no-repeat;
+  background:url(../img/header_resize_bg.jpg) center no-repeat;
   background-size:100%;
 }
 .superheader{
