--- a/css/main.css
+++ b/css/main.css
@@ -375,7 +375,7 @@ a {
 
 .vaporwave-road {
   background-color: #140C2A;
-  background: url(../img/header_bg.png) center no-repeat;
+  background: url(../img/header_resize_bg.jpg) center no-repeat;
   background-size: 100%; }
 
 .superheader {
