--- a/src/assets/scss/old_style.scss
+++ b/src/assets/scss/old_style.scss
@@ -240,32 +240,64 @@ a{
 
 .portfolio-list{
   overflow: auto;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  margin: 1em auto;
 
+  li{
+    float:left;
+  }
+  li:hover .portfolio-content{
+    background-color:rgba(10,10,10,0.767);
+  }
+  .portfolio-content{
+    display: none;
+
+  }
+  .portfolio-item:hover .portfolio-content{
+    display: inline-block;
+    line-height: 1.4;
+    letter-spacing: 1px;
+    font-size: 1.7em;
+    text-align: center;
+    span{
+      font-weight: bold;
+      color:$teel;
+      position: relative;
+      top:120px;
+      text-shadow: 2px 2px $deepPurp;
+    }
+    span:hover{
+      color:$sBlau;
+    }
+
+  }
   .portfolio-item{
-    decoration:none;
-    list-style:none;
-    div{
-     span{
-       padding: 4px 0 4px 0;
-     }
+    overflow: auto;
+    width: 300px;
+    height:300px;
+    a{
+      display: block;
+      height: 100%;
+      width: 100%;
+      :active{
+        .portfolio-content{
+          span{
+            color:$rot;
+          }
+        }
     }
-    div:hover .portfolio-content{
-      background-color:rgba(10,10,10,0.767);
-    }
-    .portfolio-content{
-      width: inherit;
-      height:inherit;
-      background-color:rgba(10,10,10,0.12);
 
     }
+
+
+  }
+  .portfolio-content{
+    width: inherit;
+    height:inherit;
+    background-color:rgba(10,10,10,0.12);
+
   }
 
 }
-.modal{
+.modalDialog{
   color:$deepPurp;
   position: fixed;
   top: 0;
@@ -274,7 +306,7 @@ a{
   height: 100%;
   background:rgba(0,0,0,0.8);
   z-index: 99999;
-  opacity: 1;
+  opacity: 0;
   transition: all 400ms ease-in-out;
   pointer-events: none;
 
