--- a/src/assets/scss/_palette.scss
+++ b/src/assets/scss/_palette.scss
@@ -30,6 +30,8 @@ $bluprint:#4e9ad5;
 
 
 // Colors
+$portfolioBgLight:rgba(10,10,10,0.12);
+$portfolioBgDark:rgba(10,10,10,0.767);
 
 //fontzzz
 @import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
