--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -153,8 +153,8 @@ a{
   font-size: 18px;
 }
 .thumbnail {
-  max-width: 320px;
-  max-height: 320px;
+  max-width: 350px;
+  max-height: 350px;
 }
 
 .navbar{
@@ -248,17 +248,28 @@ a{
   }
 }
 
-
+.portfolio-list > div{
+  width: 100%;
+  max-height: 416px;
+  overflow: none;
+  div{
+    // height: 416px; //temporary kludge!
+  }
+}
 
 .portfolio-list{
-  overflow: auto;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  // max-width: 100%;
+  overflow: none;
+  display: grid;
   justify-content: space-around;
-  margin: 1em auto;
+  margin: 0;
+  padding: 0;
+  grid-template-columns: 25% 25% 25% 25%;
+  grid-template-rows: 50% 50%;
+
 
   .portfolio-item{
+    background-color: $portfolioBgDark;
 
     h4{
       margin-bottom: 0;
@@ -266,9 +277,9 @@ a{
 
    span{
      display: inline-block;
-     width: 100%;
+     max-width: 100%;
      padding: 6px 0 4px 0;
-     background-color: $portfolioBgDark;
+     // background-color: $portfolioBgDark;
      font-size: 1.25em;
      text-align: left;
    }
@@ -292,7 +303,7 @@ a{
   left: 0;
   width: 100%;
   height: 100%;
-  background:rgba(0,0,0,0.8);
+  // background:rgba(0,0,0,0.8);
   z-index: 99999;
   opacity: 1;
   transition: all 400ms ease-in-out;
@@ -437,7 +448,7 @@ a{
     font-family: 'Dosis','Raleway','Open Sans',sans-serif;
     font-size: 1.5em;
     padding:4px;
-    
+
   }
   a{
     display: inline-block;
